@@ -153,6 +153,7 @@ wxMSW:
 - added wxTextCtrl::HitTest()
 - experimental wxURL implementation using WinInet functions (Hajo Kirchhoff)
 - fixed several bugs in wxNotebook with wxNB_MULTILINE style
+- accelerators are now initially hidden if appropriate (Peter Nielsen)
 
 wxGTK:
 
